changes to git commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 internal/logs/logs.txt
-
+internal/logs/text.txt
 .DS_Store
-
 cmd/lambda_job/*
-
 cmd/script.py
-
 job_scheduler_accessKeys.csv
-
 job_scheduler_credentials.csv
